Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,17 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
+
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'AzureCRConnection'
+        repository: 'RedingtonCalculator'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        buildContext: '/RedingtonCalculator.Web'
+        tags: 
+          $(tag)
+
     - task: Docker@2
       inputs:
         containerRegistry: 'AzureCRConnection'
