--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,16 +26,7 @@ stages:
         containerRegistry: 'AzureCRConnection'
         repository: 'RedingtonCalculator'
         command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        buildContext: '/RedingtonCalculator.Web'
-        tags: 
-          $(tag)
-
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'AzureCRConnection'
-        repository: 'RedingtonCalculator'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
+        Dockerfile: '.\RedingtonCalculator.Web\Dockerfile'
+        buildContext: '.'
         tags: 
           $(tag)
