--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
     steps:
     - task: Docker@2
       inputs:
-        containerRegistry: 'AzureCRConnection'
+        containerRegistry: 'RedingtonCR'
         repository: 'RedingtonCalculator'
         command: 'buildAndPush'
         Dockerfile: '$(Build.Repository.LocalPath)/RedingtonCalculator.Web/Dockerfile'
