--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,33 @@ stages:
         buildContext: '$(Build.Repository.LocalPath)'
         tags: |
           $(tag)
+
+- stage: Provision
+  displayName: 'Terraforming on Azure...'
+  dependsOn: Build
+  jobs:
+  - job: Provision
+    displayName: 'Create App Service'
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables: 
+    - group: Terraform-SP
+    steps:
+    - script: |
+        set -e
+
+        echo $(ARM_CLIENT_ID)
+        echo $(ARM_CLIENT_SECRET)
+        echo $(ARM_TENANT_ID)
+        echo $(ARM_SUBSCRIPTION_ID)
+
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      name: 'RunTerraform'
+      displayName: 'Run Terraform'
+      env:
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        TF_VAR_imagebuild: $(tag)
